--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "mongoose": "^7.4.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "autoprefixer": "^10.4.15",
+    "daisyui": "^3.6.1",
     "dotenv": "^16.3.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3"
   },
   "name": "traversy-mern",
   "version": "1.0.0",
