--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,3 @@
-NODE_ENV=
-PORT=
-MONGO_URI=
+NODE_ENV=development
+PORT=5000
+MONGO_URI=mongodb+srv://<user>:<password>@<cluster-name>.mongodb.net/<collection-name>?retryWrites=true&w=majority
